<resources>
    <string name="app_name">Fbla_project_S</string>
    <string name="hint_name">Hint name</string>
    <string name="confirm">Confirm</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="describe_the_bug">Describe The Bug</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_event">Enter Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="event_description">Event Description</string>
    <string name="events">Events</string>
</resources>