<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity"
    android:background="@color/blue">

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="201dp"
        android:layout_height="51dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="163dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="133dp"
        android:layout_height="42dp"
        android:layout_marginBottom="392dp"
        android:backgroundTint="@color/black"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="133dp"
        android:layout_height="42dp"
        android:layout_marginBottom="288dp"
        android:backgroundTint="@color/purple_500"
        android:text="Sign Out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bugLabel"
        android:layout_width="201dp"
        android:layout_height="51dp"
        android:layout_marginTop="108dp"
        android:gravity="center"
        android:text="Report Bug"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/bugInput"
        android:layout_width="409dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/describe_the_bug"
        android:inputType="text"
        android:lines="5"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />



    <Button
        android:id="@+id/delete_account_button"
        android:layout_width="112dp"
        android:layout_height="66dp"
        android:backgroundTint="#FF0000"
        android:layout_marginStart="149dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="120dp"
        android:text="Delete Account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_out_button" />
</androidx.constraintlayout.widget.ConstraintLayout>